--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body{
 
 }
 
+.navbar__s4{
+    display: none;
+}
+
 .categories{
     display: flex;
     padding: 10px;
@@ -80,7 +84,9 @@ body{
 }
 
 .course-card{
-    width: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img{
@@ -141,4 +147,30 @@ body{
     align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+/*  Media Queries */
+
+@media screen and (max-width:800px){
+    body{
+        font-size: 10px;
+
+        
+    }
+    
+}
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+
+    .navbar__s4{
+        display: block;
+    }
 }
